# nhf

./: CMakeLists.txt  README.md  func_test.c  main  main.c  nhf
cards/: 1.vcf  Egy Kettő.vcf  Firstname Lastname.vcf  Mr. Körte Alma.vcf  Mátyás Paluska.vcf  egy.vcf  janos neumann.vcf  template.vcf
docs/: speci.css  speci.html  template.vcf
docs/doc_html/: README_8md.html  annotated.html  bug.html  build_2CMakeFiles_23_826_84_2CompilerIdC_2CMakeCCompilerId_8c.html  build_2CMakeFiles_2nhf_8dir_2include_2lista_8c_8o_8d.html  build_2CMakeFiles_2nhf_8dir_2include_2menu_8c_8o_8d.html  build_2CMakeFiles_2nhf_8dir_2include_2vcard_8c_8o_8d.html  build_2CMakeFiles_2nhf_8dir_2main_8c_8o_8d.html  classes.html  cmake-build-debug_2CMakeFiles_23_826_84_2CompilerIdC_2CMakeCCompilerId_8c.html  cmake-build-debug_2CMakeFiles_2nhf_8dir_2include_2lista_8c_8o_8d.html  cmake-build-debug_2CMakeFiles_2nhf_8dir_2include_2menu_8c_8o_8d.html  cmake-build-debug_2CMakeFiles_2nhf_8dir_2include_2vcard_8c_8o_8d.html  cmake-build-debug_2CMakeFiles_2nhf_8dir_2main_8c_8o_8d.html  debugmalloc_8h.html  debugmalloc_8h_source.html  dir_0d8694bf898b1380c6c1e31ffbd8d6d4.html  dir_10f036ac38cfaae915c163aad43f0e4a.html  dir_33a9904b6a75bad7ec067ed79bd603ea.html  dir_4671eeaa9eb149b297a27d689ebba590.html  dir_514a435470021650b2337e1e68648c83.html  dir_8a75efa6eeffd56aa4afc1ea5b6682d3.html  dir_9c36e887facef04122c63ee22321abb8.html  dir_9e496f76809dcc4a3e53d26f6ce14b29.html  dir_a09e556614a201ad671c6eafa448d742.html  files.html  func__test_8c.html  (+37 more)
include/: lista.c  lista.h  menu.c  menu.h  vcard.c  vcard.h
(+77 files in other folders)
